// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, iOS 390 1`] = `
{
  "lines": 436,
  "sha256": "3e89b5d49c06ffb0a5507ce58e1744e5ec157949d7a8009bd54f281dfb96c6eb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 390 1`] = `
{
  "lines": 436,
  "sha256": "3e89b5d49c06ffb0a5507ce58e1744e5ec157949d7a8009bd54f281dfb96c6eb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault at rest, web 768 1`] = `
{
  "lines": 436,
  "sha256": "3e89b5d49c06ffb0a5507ce58e1744e5ec157949d7a8009bd54f281dfb96c6eb",
}
`;

exports[`lane R2 — the phone is unchanged (golden) coi-vault?subId=S1 (the detail early return), iOS 390 1`] = `
{
  "lines": 696,
  "sha256": "57553219d0e2afa957a37e6a0abc634f1afb70011d7c7c152e6a4cabcab4a87c",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs add sheet (add-sub), iOS 390 1`] = `
{
  "lines": 809,
  "sha256": "6256bf3f598340422a0953d9753f6e1ebffc4de96b6009280e665032de5e7c48",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, iOS 390 1`] = `
{
  "lines": 809,
  "sha256": "b2de3a9a1a39dc3cec34aab7e6564464bf9108525f3661e6c2b878ad0a043cdc",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 390 1`] = `
{
  "lines": 809,
  "sha256": "b2de3a9a1a39dc3cec34aab7e6564464bf9108525f3661e6c2b878ad0a043cdc",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs at rest, web 768 1`] = `
{
  "lines": 809,
  "sha256": "b2de3a9a1a39dc3cec34aab7e6564464bf9108525f3661e6c2b878ad0a043cdc",
}
`;

exports[`lane R2 — the phone is unchanged (golden) subs detail open (sub-S1), iOS 390 1`] = `
{
  "lines": 986,
  "sha256": "1c8991e8728b13a201c97051c9e16c97603d21031a473f6939fd7c73d93c8d9e",
}
`;
